@@ -1,3 +1,6 @@
+Support recent versions of sysinst (CVS date 2014.08.03.16.09.38 or
+newer), where set selection happens after disk partitioning rather
+than before.
 
 Document qemu 2.0.0nb4 as a known working version.
 
